--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav class="navbar"></nav>
-    <header class="menu-container"></header>
-    <div></div>
+    <div class="nav-container">
+        <nav class="navbar">
+            <ol class="list-contents">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Info</a></li>
+            <li><a href="#">About</a></li>
+            </ol>
+        </nav>
+    </div>
+     <header class="menu-container"></header>
+    
     <footer></footer>
 </body>
 </html>
