add css for containers

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav>
     </div>
      <header class="menu-container"></header>
-    
-    <footer></footer>
+    <div class="body-container"></div>
+    <footer class="footer-container"></footer>
 </body>
 </html>
