change nav to divs

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="nav-container">
         <nav class="navbar">
-            <ol class="list-contents">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Info</a></li>
-            <li><a href="#">About</a></li>
-            </ol>
+            <div class="list-contents">
+                <div><a href="#">Home</a></div>
+                <div><a href="#">Info</a></div>
+                <div><a href="#">About</a></div>
+            </div>
         </nav>
     </div>
      <header class="menu-container"></header>
