--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="nav-container">
-        <nav class="navbar">
-            <div class="list-contents">
-                <div><a href="#">Home</a></div>
-                <div><a href="#">Info</a></div>
-                <div><a href="#">About</a></div>
-            </div>
-        </nav>
+    <div class="menu-container">
+        <div class="menu">
+            <div><a href="#">Home</a></div>
+            <div><a href="#">Info</a></div>
+            <div><a href="#">About</a></div>
+        </div>
     </div>
-     <header class="menu-container"></header>
     <div class="body-container"></div>
     <footer class="footer-container"></footer>
 </body>
