--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div class="menu-container">
         <div class="menu">
             <div><a href="#">Home</a></div>
-            <div><a href="#">Info</a></div>
-            <div><a href="#">About</a></div>
+            <div><a href="#">Sign Up</a></div>
+            <div><a href="#">Login</a></div>
         </div>
     </div>
-    <div class="body-container"></div>
-    <footer class="footer-container"></footer>
+    <div class="header-container"></div>
+    <div class="footer-container"></div>
 </body>
 </html>
