--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         </div>
     </div>
     <div class="header-container"></div>
+        <div class="header-item hdr-item-one"></div>
+        <div class="header-item hdr-item-two"></div>
+        <div class="header-item hdr-item-three"></div>
+        <div class="header-item hdr-item-four"></div>
     <div class="footer-container"></div>
 </body>
 </html>
