Add body flexbox css

--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
             <div><a href="#">Login</a></div>
         </div>
     </div>
-    <div class="header-container"></div>
-        <div class="header-item hdr-item-one"></div>
-        <div class="header-item hdr-item-two"></div>
-        <div class="header-item hdr-item-three"></div>
-        <div class="header-item hdr-item-four"></div>
+    <div class="header-container">
+        <div class="header">
+            <div class="header-item hdr-item-one">box</div>
+            <div class="header-item hdr-item-two">box 1</div>
+            <div class="header-item hdr-item-three">box 2</div>
+            <div class="header-item hdr-item-four">box 3</div>
+        </div>
+    </div>
     <div class="footer-container"></div>
 </body>
 </html>
