--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <div class="header-container">
         <div class="header">
+            <p class="header-text"><img>This is a sample image.</p>
             <div class="header-item hdr-item-one">box</div>
             <div class="header-item hdr-item-two">box 1</div>
             <div class="header-item hdr-item-three">box 2</div>
