Create space on webpage

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="menu-container">
         <div class="menu">
+            <div class="logo">Header Logo</div>
             <div><a href="#">Home</a></div>
             <div><a href="#">Sign Up</a></div>
             <div><a href="#">Login</a></div>
@@ -16,13 +17,21 @@
     </div>
     <div class="header-container">
         <div class="header">
-            <p class="header-text"><img>This is a sample image.</p>
-            <div class="header-item hdr-item-one">box</div>
-            <div class="header-item hdr-item-two">box 1</div>
-            <div class="header-item hdr-item-three">box 2</div>
-            <div class="header-item hdr-item-four">box 3</div>
+            <p class="header-text">This is a sample image.</p>
+            <div class="header-item">box</div>
         </div>
     </div>
-    <div class="footer-container"></div>
+    <div class="body-container">
+        <div class="main-body">
+            <div class="body-item first-item">box 1</div>
+            <div class="body-item">box 2</div>
+            <div class="body-item last-item">box 3</div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer-item footer-one"></div>
+        <div class="footer-item footer-two"></div>
+        <div class="footer-item footer-three"></div>
+    </div>
 </body>
 </html>
