--- a/index.html
+++ b/index.html
@@ -10,22 +10,37 @@
     <div class="menu-container">
         <div class="menu">
             <div class="logo">Header Logo</div>
-            <div><a href="#">Home</a></div>
-            <div><a href="#">Sign Up</a></div>
-            <div><a href="#">Login</a></div>
+            <div><a class="home" href="#">Home</a></div>
+            <div><a class="sign-up" href="#">Sign Up</a></div>
+            <div><a class="login" href="#">Login</a></div>
         </div>
     </div>
     <div class="header-container">
         <div class="header">
-            <p class="header-text">This is a sample image.</p>
+            <h1 class="header-text">This is a sample image.</h1>
+            <p>This is my website.</p>
             <div class="header-item">box</div>
         </div>
     </div>
     <div class="body-container">
         <div class="main-body">
-            <div class="body-item first-item">box 1</div>
-            <div class="body-item">box 2</div>
-            <div class="body-item last-item">box 3</div>
+            <div class="body-item first-item">
+                <img src="LPP Images/tax-consaltant.jpg" alt="tax consaltant">
+            </div>
+            <div class="body-item">
+                <img src="LPP Images/tax-control.jpg" alt="control taxes"></div>
+            <div class="body-item">
+                <img src="LPP Images/tax-evasion.jpg" alt="tax evasion"></div>
+            <div class="body-item last-item">
+                <img src="LPP Images/frog 1.jpg" alt="frog">
+            </div>
+        </div>
+    </div>
+    <div class="second-body-container">
+        <div class="second-body">
+            <div class="second-item">Text</div>
+            <div class="second-item">Image</div>
+            <div class="second-item">Text</div>
         </div>
     </div>
     <div class="footer">
