Edit flexbox for second body Add flex to footer

--- a/index.html
+++ b/index.html
@@ -7,46 +7,57 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="menu-container">
-        <div class="menu">
-            <div class="logo">Header Logo</div>
-            <div><a class="home" href="#">Home</a></div>
-            <div><a class="sign-up" href="#">Sign Up</a></div>
-            <div><a class="login" href="#">Login</a></div>
+    <nav class="menu">
+        <div class="container">
+            <div class="logo">Durham</div>
+            <ul class="navbar">
+                <li><a class="home" href="#">Home</a></li>
+                <li><a class="sign-up" href="#">Sign Up</a></li>
+                <li><a class="login" href="#">Login</a></li>
+            </ul>
         </div>
-    </div>
-    <div class="header-container">
-        <div class="header">
-            <h1 class="header-text">This is a sample image.</h1>
-            <p>This is my website.</p>
-            <div class="header-item">box</div>
+    </nav>
+    <header class="header">
+        <div class="container">
+            <div>
+                <h1>Welcome to My Landing Page Project!</h1>
+                <p>Just practicing and doing a lot of trial by error. Thank you to the people behind the Odin Project for giving people like me a chance to practice something like this.
+                </p>
+            </div>
+            <img src="LPP Images/coding-101.jpg" alt="">
         </div>
-    </div>
-    <div class="body-container">
-        <div class="main-body">
-            <div class="body-item first-item">
+    </header>
+    <section class="main-body">
+        <div class="container">
+            <div class="boxes">
                 <img src="LPP Images/tax-consaltant.jpg" alt="tax consaltant">
+                <p>Hire a Tax Consaltant.</p>
             </div>
-            <div class="body-item">
-                <img src="LPP Images/tax-control.jpg" alt="control taxes"></div>
-            <div class="body-item">
-                <img src="LPP Images/tax-evasion.jpg" alt="tax evasion"></div>
-            <div class="body-item last-item">
+            <div class="boxes">
+                <img src="LPP Images/tax-control.jpg" alt="control taxes">
+                <p>Control Your Taxes.</p>
+            </div>
+            <div class="boxes">
+                <img src="LPP Images/tax-evasion.jpg" alt="tax evasion">
+                <p>Don't Go to Jail for Tax Evasion!</p>
+            </div>
+            <div class="boxes">
                 <img src="LPP Images/frog 1.jpg" alt="frog">
+                <p>Even Frog has Taxes.</p>
             </div>
         </div>
-    </div>
-    <div class="second-body-container">
-        <div class="second-body">
+    </section>
+    <section class="second-body">
+        <div class="container">
             <div class="second-item">Text</div>
             <div class="second-item">Image</div>
             <div class="second-item">Text</div>
         </div>
-    </div>
-    <div class="footer">
+    </section>
+    <footer class="footer">
         <div class="footer-item footer-one"></div>
         <div class="footer-item footer-two"></div>
         <div class="footer-item footer-three"></div>
-    </div>
+    </footer>
 </body>
 </html>
