Add imgs to Footer Set media for footer

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <h1>Welcome to My Landing Page Project!</h1>
                 <p>Just practicing and doing a lot of trial by error. Thank you to the people behind the Odin Project for giving people like me a chance to practice something like this.
                 </p>
+                <button>Click Me!</button>
             </div>
             <img src="LPP Images/coding-101.jpg" alt="">
         </div>
@@ -49,9 +50,10 @@
     </section>
     <section class="second-body">
         <div class="container">
-            <div class="second-item">Text</div>
-            <div class="second-item">Image</div>
-            <div class="second-item">Text</div>
+            <h3>Doing Your Taxes Could Save You a Fortune!</h3>
+            <div>
+                <img src="LPP Images/bookkeeping.jpg" alt="bookkeeping">
+            </div>
         </div>
     </section>
     <footer class="footer">
