Project Finish Still needs work though

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h1>Welcome to My Landing Page Project!</h1>
                 <p>Just practicing and doing a lot of trial by error. Thank you to the people behind the Odin Project for giving people like me a chance to practice something like this.
                 </p>
-                <button>Click Me!</button>
+                <button><a href="https://github.com/jomoma3457">Click Me!</a></button>
             </div>
             <img src="LPP Images/coding-101.jpg" alt="">
         </div>
@@ -56,10 +56,10 @@
             </div>
         </div>
     </section>
-    <footer class="footer">
-        <div class="footer-item footer-one"></div>
-        <div class="footer-item footer-two"></div>
-        <div class="footer-item footer-three"></div>
-    </footer>
+    <div class="footer">
+        <div class="container">
+            <h4>Made by <a href="https://github.com/jomoma3457">Jalen</a></h4>
+        </div>
+    </div>
 </body>
 </html>
